# kafka_queue

./: .gitignore  docker-compose.yaml  main.py  pyproject.toml  settings.py
consumer/: consumer.py
producer/: producer.py  schemas.py
tests/: data.py
